--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "graphql": "^15.4.0"
+    "graphql": "^15.4.0",
+    "mongoose": "^5.11.8"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
